update giturl to gitlab repo
Signed-off-by: Patrick McCarty <patrick.mccarty@intel.com>

--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = krusader
 url = https://download.kde.org/stable/krusader/2.7.2/krusader-2.7.2.tar.xz
 archives = 
-giturl = https://anongit.kde.org/krusader.git
+giturl = https://invent.kde.org/utilities/krusader.git
 domain = 
 
 [autospec]
