--- a/options.conf
+++ b/options.conf
@@ -1,9 +1,10 @@
 [package]
 name = krusader
-url = https://download.kde.org/stable/krusader/2.7.2/krusader-2.7.2.tar.xz
+url = https://download.kde.org/stable/krusader/2.8.0/krusader-2.8.0.tar.xz
 archives = 
 giturl = https://invent.kde.org/utilities/krusader.git
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
@@ -34,16 +35,22 @@ insecure_build = false
 keepstatic = false
 # do not require autostart subpackage
 no_autostart = false
+# do not use the replacement pattern for file matching
+no_glob = false
 # do not generate debuginfo for this package
 nodebug = false
 # disable stripping binaries
 nostrip = false
+# configure build also for openmpi
+openmpi = false
 # optimize build for size over speed
 optimize_size = false
 # set profile for pgo
 pgo = false
 # set flags for security-sensitive builds
 security_sensitive = false
+# package is only used by servers
+server = false
 # do not run test suite
 skip_tests = false
 # add .so files to the lib package instead of dev
